--- a/tutorials/estate/views/estate_property_views.xml
+++ b/tutorials/estate/views/estate_property_views.xml
@@ -3,17 +3,73 @@
     <data>
 
         <record id="estate_action_estate_property" model="ir.actions.act_window">
-            <field name="name">Properties </field>
+            <field name="name">Properties</field>
             <field name="res_model">estate.property</field>
             <field name="view_mode">list,form</field>
         </record>
 
-        <menuitem id="estate_menu_root" name="Real Estate">
-            <menuitem id="estate_menu_advertisements" name="Advertisements">
-                <menuitem id="estate_menu_estate_property"
-                    action="estate_action_estate_property" />
-            </menuitem>
-        </menuitem>
+        <menuitem id="estate_menu_root" name="Real Estate" />
+        <menuitem id="estate_menu_advertisements" name="Advertisements" />
+        <menuitem id="estate_menu_estate_property"
+            action="estate_action_estate_property" />
+
+        <record id="view_estate_estate_property_tree" model="ir.ui.view">
+            <field name="name">estate.estate.property.tree</field>
+            <field name="model">estate.property</field>
+            <field name="arch" type="xml">
+                <list string="Estate Properties">
+                    <field name="name" />
+                    <field name="postcode" />
+                    <field name="bedrooms" />
+                    <field name="living_area" />
+                    <field name="expected_price" />
+                    <field name="selling_price" />
+                    <field name="date_availability" />
+                </list>
+            </field>
+        </record>
+
+        <record id="view_estate_estate_property_form" model="ir.ui.view">
+            <field name="name">estate.estate.property.form</field>
+            <field name="model">estate.property</field>
+            <field name="arch" type="xml">
+                <form string="Properties">
+                    <sheet>
+                        <div>
+                            <h1>
+                                <field name="name"
+                                    placeholder="Name Name" />
+                            </h1>
+                        </div>
+
+                        <group>
+                            <group>
+                                <field name="postcode" />
+                                <field name="date_availability"></field>
+                            </group>
+                            <group>
+                                <field name="expected_price"></field>
+                                <field name="selling_price"></field>
+                            </group>
+                        </group>
+                        <notebook>
+                            <page string="Description">
+                                <group>
+                                    <field name="description" />
+                                    <field name="bedrooms" />
+                                    <field name="living_area" />
+                                    <field name="facades" />
+                                    <field name="garage" />
+                                    <field name="garden" />
+                                    <field name="garden_area" />
+                                    <field name="garden_orientation" />
+                                </group>
+                            </page>
+                        </notebook>
+                    </sheet>
+                </form>
+            </field>
+        </record>
 
     </data>
 </odoo>
