--- a/tutorials/estate/views/estate_property_views.xml
+++ b/tutorials/estate/views/estate_property_views.xml
@@ -8,10 +8,39 @@
             <field name="view_mode">list,form</field>
         </record>
 
-        <menuitem id="estate_menu_root" name="Real Estate" />
-        <menuitem id="estate_menu_advertisements" name="Advertisements" />
-        <menuitem id="estate_menu_estate_property"
-            action="estate_action_estate_property" />
+        <record id="estate_action_estate_property_type" model="ir.actions.act_window">
+            <field name="name">Properties Type</field>
+            <field name="res_model">estate.property.type</field>
+            <field name="view_mode">list,form</field>
+        </record>
+
+        <record id="estate_action_estate_property_tag" model="ir.actions.act_window">
+            <field name="name">Properties Tags</field>
+            <field name="res_model">estate.property.tag</field>
+            <field name="view_mode">list,form</field>
+        </record>
+
+        <menuitem id="estate_menu_root" name="Real Estate">
+            <menuitem id="estate_menu_advertisements" name="Advertisements">
+                <menuitem
+                    id="estate_menu_estate_property"
+                    action="estate_action_estate_property" />
+            </menuitem>
+
+            <menuitem id="estate_menu_setting" name="Settings">
+                <menuitem
+                    id="estate_menu_property_type"
+                    name="Property Types"
+                    action="estate_action_estate_property_type" />
+
+                <menuitem
+                    id="estate_menu_property_tag"
+                    name="Property Tags"
+                    action="estate_action_estate_property_tag" />
+            </menuitem>
+
+        </menuitem>
+
 
         <record id="view_estate_estate_property_tree" model="ir.ui.view">
             <field name="name">estate.estate.property.tree</field>
@@ -43,30 +72,59 @@
                             </h1>
                         </div>
 
+                        <field name="tag_ids" widget="many2many_tags" />
+
                         <group>
                             <group>
+                                <field name="property_type_id" />
                                 <field name="postcode" />
-                                <field name="date_availability"></field>
+                                <field name="date_availability" />
                             </group>
                             <group>
-                                <field name="expected_price"></field>
-                                <field name="selling_price"></field>
+                                <field name="expected_price" />
+                                <field name="selling_price" />
                             </group>
                         </group>
                         <notebook>
+
                             <page string="Description">
                                 <group>
-                                    <field name="description" />
-                                    <field name="bedrooms" />
-                                    <field name="living_area" />
-                                    <field name="facades" />
-                                    <field name="garage" />
-                                    <field name="garden" />
-                                    <field name="garden_area" />
-                                    <field name="garden_orientation" />
-                                    <field name="state" />
+                                    <group>
+                                        <field name="description" />
+                                        <field name="bedrooms" />
+                                        <field name="living_area" />
+                                        <field name="facades" />
+
+                                    </group>
+                                    <group>
+                                        <field name="garage" />
+                                        <field name="garden" />
+                                        <field name="garden_area" />
+                                        <field name="garden_orientation" />
+                                        <field name="state" />
+                                    </group>
                                 </group>
                             </page>
+
+                            <page string="Offers">
+                                <field name="offer_ids">
+                                    <list string="Offers" editable="bottom">
+                                        <field name="price" />
+                                        <field name="partner_id" />
+                                        <field name="status" />
+                                    </list>
+                                </field>
+                            </page>
+
+                            <page string="Order Information">
+                                <group>
+                                    <group>
+                                        <field name="salesman_id" required="true" />
+                                        <field name="buyer_id" />
+                                    </group>
+                                </group>
+                            </page>
+
                         </notebook>
                     </sheet>
                 </form>
@@ -108,7 +166,7 @@
                     <filter name="group_by_postcode"
                         string="Prostcode"
                         domain="[]"
-                        context="{'group_by':'postcode'}" />                     
+                        context="{'group_by':'postcode'}" />
                     <filter name="group_by_garage"
                         string="Garage"
                         domain="[]"
